<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.basemap.MainActivity">
    <item
        android:id="@+id/action_search"
        app:actionLayout="@layout/search_layout"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/World_Street_Map"
            android:showAsAction="never"
            android:title="@string/StreetMapMenu" />
        <item
            android:id="@+id/World_Topo"
            android:showAsAction="never"
            android:title="@string/TopoMenu" />
        <item
            android:id="@+id/Gray"
            android:showAsAction="never"
            android:title="@string/GrayMenu" />
        <item
            android:id="@+id/Ocean_Basemap"
            android:showAsAction="never"
            android:title="@string/OceanMenu" />
    </group>
</menu>
